--- a/Static Security Assessment/ooscap_assessment_kub.yml
+++ b/Static Security Assessment/ooscap_assessment_kub.yml
@@ -7,7 +7,7 @@
       name: libopenscap8
       state: present
   - name: Transfer scap datastream
-    copy: src=/home/giuseppe/Downloads/scap-security-guide-0.1.53/ssg-ubuntu1804-ds-1.2.xml dest=/tmp/ssg-ubuntu1804-ds-1.2.xml mode=0777
+    copy: src=ssg-ubuntu1804-ds-1.2.xml dest=/tmp/ssg-ubuntu1804-ds-1.2.xml mode=0777
  
   - name: Execute static assessment
     command: oscap xccdf eval --profile anssi_np_nt28_minimal --report /tmp/report.html /tmp/ssg-ubuntu1804-ds-1.2.xml
