--- a/.config/terraform.config
+++ b/.config/terraform.config
@@ -15,11 +15,10 @@
   type         = 
 
 #VM Credentials
-  user: 
-  password: 
-  root pass: 
-   
-OR
+  user = 
+  password = 
+  root pass =
+#OR
   sshkeys = 
     
    
