--- a/.config/security_env_assessment.config
+++ b/.config/security_env_assessment.config
@@ -2,7 +2,9 @@
 
 #Chef inspec Profile
   name = 
-
+  Path_on_Jenkins_Server =
+  
 #OpenScap xccdf source and profile
   name = 
   profile =
+  Path_on_Jenkins_Server =
