--- a/Microservice Files/Jenkinsfile
+++ b/Microservice Files/Jenkinsfile
@@ -30,9 +30,14 @@ pipeline {
       steps{
         sh 'docker run --name ${IMAGE} -t -d $registry:${DOCKER_TAG}'
         #Insert your chef inspec profile
-        sh 'inspec exec ${HERE} -t docker://${IMAGE} --chef-license=accept || true'
+        sh 'inspec exec ${HERE} -t docker://${IMAGE} --reporter html:inspec_report.html --chef-license=accept || true'
         sh 'docker stop ${IMAGE}'
         sh 'docker container rm ${IMAGE}'
+        
+        sh 'git remote set-url origin "https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/${GIT_USERNAME}/${JOB_NAME}.git"'
+        sh 'git add Results/*'
+        sh 'git commit -m "Add report File"'
+        sh 'git push origin HEAD:main'
      }
     }
     stage('Push Image') {
