--- a/Microservice Files/sonar-project.properties
+++ b/Microservice Files/sonar-project.properties
@@ -7,3 +7,5 @@ sonar.sources=
 sonar.tests=
 sonar.language=
 sonar.profile=
+# Here, we can exclude all the directories that you don't want to analyse.
+sonar.exclusions=
