--- a/.config/provisioning.config
+++ b/.config/provisioning.config
@@ -7,13 +7,17 @@
 
 #Resource pool Proxmox
   pool = 
-
   target_node =
 
 #Disk Info.
   storage      = 
   type         = 
 
+#VM names
+  name =
+#Template to clone
+  name =
+  
 #VM Credentials
   user = 
   password = 
