--- a/Static Security Assessment/oscap_assessment_playbook.yml
+++ b/Static Security Assessment/oscap_assessment_playbook.yml
@@ -10,11 +10,11 @@
     copy: src=${XCCDF} dest=/tmp/${XCCDF} mode=0777
  
   - name: Execute static assessment
-    command: oscap xccdf eval --profile ${XCCDF_PROFILE} --report /tmp/report.html /tmp/${XCCDF}
+    command: oscap xccdf eval --profile ${XCCDF_PROFILE} --report /tmp/oscap_report.html /tmp/${XCCDF}
     register: result
     failed_when:
       - result.rc == 1
   
   - fetch:
-      src: /tmp/report.html
+      src: /tmp/oscap_report.html
       dest: ../Results/
