--- a/Microservice Files/Jenkinsfile
+++ b/Microservice Files/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
   post{
     success{
       echo 'Post success'
-      build job: '${APP_NAME}', parameters: [string (value: "$IMAGE"+":"+"$DOCKER_TAG", description: 'Parametro', name: 'FRONT_END')]
+      build job: '${APP_NAME}', parameters: [string (value: "$IMAGE"+":"+"$DOCKER_TAG", description: 'Parametro', name: '$IMAGE')]
     }
   }
 }
