--- a/.config/provisioning.config
+++ b/.config/provisioning.config
@@ -1,12 +1,12 @@
 #This file contain configuration for provisioning step that was provided from user
 
 #ipconfig VM
-  IP_VM1 =
-  IP_VM2 =
+  IP_VM1 = 192.168.6.76
+  IP_VM2 = 192.168.6.97
   Gateway = 
 
 #Resource pool Proxmox
-  pool = 
+  pool = "Giuseppe..."
   target_node =
 
 #Disk Info.
