--- a/.config/deployment.config
+++ b/.config/deployment.config
@@ -13,13 +13,14 @@
 #Config for Pods
     type = Pod
   # Name
-    name =
+    name = wordpress
   # Labels
-    key = value
+    app: wordpress
   # Selectors
-    key = value
+    app: wordpress
+    tier: wordpress
   # Number of replica for replica-set
-    replicas = 
+    replicas = 1
   # Security Context Capability (comma separated list)
     drop = 
     add  = 
@@ -32,11 +33,12 @@
   # Temporary Volumes
     name = 
   # Env. Variables
-    name =
-    value =
+    WORDPRESS_DB_HOST = wordpress-mysql
+    WORDPRESS_DB_PASSWORD = fake
   # Persisten Volume
-    name = 
-    claimName =
+    name = wordpress-persistent-storage
+    claimName = wp-pv-claim
+    ...
 ---
 #Config for Service
     type = Service
