--- a/.config/security_env_assessment.config
+++ b/.config/security_env_assessment.config
@@ -1,10 +1,10 @@
 #This file contain static security assessment profile info.
 
 #Chef inspec Profile
-  name = 
-  Path_on_Jenkins_Server =
+  name = linux-baseline
+  Path_on_Jenkins_Server = https://github.com/dev-sec/apache-baseline
   
 #OpenScap xccdf source and profile
-  name = 
-  profile =
-  Path_on_Jenkins_Server =
+  name = ssg-ubuntu1804-ds-1.2
+  profile = anssi_np_nt28_minimal
+  Path_on_Jenkins_Server = /home/giuseppe/Downloads/scap-security-guide-0.1.53/ssg-ubuntu1804-ds-1.2.xml 
