--- a/Static Security Assessment/inspec_assessment_playbook.yml
+++ b/Static Security Assessment/inspec_assessment_playbook.yml
@@ -7,7 +7,7 @@
       deb: https://packages.chef.io/files/stable/inspec/4.20.2/ubuntu/18.04/inspec_4.20.2-1_amd64.deb
       
   - name: Execute static assessment
-    command: inspec exec ${PROFILE} --reporter html:/tmp/inspec_report.html --chef-license=accept
+    command: inspec exec https://github.com/dev-sec/linux-baseline --reporter html:/tmp/inspec_report.html --chef-license=accept
     register: result
     failed_when:
       - result.rc == 1
