--- a/Deploy/kubernetes/deployments.yaml
+++ b/Deploy/kubernetes/deployments.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   ports:
     - port: 80
+      nodePort: 31381
   selector:
     app: wordpress
     tier: frontend
@@ -33,7 +34,7 @@ spec:
         tier: frontend
     spec:
       containers:
-        - image: wordpress:latest
+        - image: peppe2794/wordpressexample
           name: wordpress
           env:
             - name: WORDPRESS_DB_HOST
@@ -52,7 +53,7 @@ spec:
               name: wordpress
           volumeMounts:
             - name: wordpress-persistent-storage
-              mountPath: /var/www/html
+              mountPath: /tmp
       volumes:
         - name: wordpress-persistent-storage
           persistentVolumeClaim:
@@ -92,11 +93,11 @@ spec:
         tier: mysql
     spec:
       containers:
-        - image: mysql:5.6
+        - image: peppe2794/wordpressexample_db
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
-              value: fake
+              value: wordpress
             - name: MYSQL_USER
               value: wordpress
             - name: MYSQL_DATABASE
@@ -108,7 +109,7 @@ spec:
               name: mysql
           volumeMounts:
             - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
+              mountPath: /tmp
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
