--- a/Deploy/kubernetes/deployments.yaml
+++ b/Deploy/kubernetes/deployments.yaml
@@ -40,7 +40,7 @@ spec:
             - name: WORDPRESS_DB_HOST
               value: wordpress-mysql
             - name: WORDPRESS_DB_PASSWORD
-              value: fake
+              value: wordpress
             - name: WORDPRESS_DB_USER
               value: wordpress
             - name: WORDPRESS_DB_PASSWORD
