--- a/Deploy/kubernetes/deployments.yaml
+++ b/Deploy/kubernetes/deployments.yaml
@@ -34,7 +34,7 @@ spec:
         tier: frontend
     spec:
       containers:
-        - image: peppe2794/wordpressexample
+        - image: $WP
           name: wordpress
           env:
             - name: WORDPRESS_DB_HOST
@@ -93,7 +93,7 @@ spec:
         tier: mysql
     spec:
       containers:
-        - image: peppe2794/wordpressexample_db
+        - image: $MYSQL
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
