--- a/.config/security_env_assessment.config
+++ b/.config/security_env_assessment.config
@@ -1,9 +1,14 @@
 #This file contain static security assessment profile info.
 
+
 #Chef inspec Profile
+  name = Apache-baseline
+  Path_on_Jenkins_Server = 
+  
   name = linux-baseline
   Path_on_Jenkins_Server = https://github.com/dev-sec/apache-baseline
   
+
 #OpenScap xccdf source and profile
   name = ssg-ubuntu1804-ds-1.2
   profile = anssi_np_nt28_minimal
