--- a/.config/security_env_assessment.config
+++ b/.config/security_env_assessment.config
@@ -3,7 +3,7 @@
 
 #Chef inspec Profile
   name = Apache-baseline
-  Path_on_Jenkins_Server = 
+  Path_on_Jenkins_Server = https://github.com/dev-sec/linux-baseline
   
   name = linux-baseline
   Path_on_Jenkins_Server = https://github.com/dev-sec/apache-baseline
