--- a/Static Security Assessment/inspec_assessment_playbook.yml
+++ b/Static Security Assessment/inspec_assessment_playbook.yml
@@ -7,11 +7,31 @@
       deb: https://packages.chef.io/files/stable/inspec/4.20.2/ubuntu/18.04/inspec_4.20.2-1_amd64.deb
       
   - name: Execute static assessment
-    command: inspec exec https://github.com/dev-sec/linux-baseline --reporter html:/tmp/inspec_report.html --chef-license=accept
+    command: "{{item}}"
+    with_items:
+      - inspec exec https://github.com/dev-sec/linux-baseline --reporter html:/tmp/inspec_report.html --chef-license=accept
+      - inspec exec https://github.com/dev-sec/ssh-baseline --reporter html:/tmp/provareport.html --chef-license=accept
     register: result
     failed_when:
       - result.rc == 1
   
   - fetch:
       src: /tmp/inspec_report.html
+      dest: ../Results/
+
+  - name: Install openscap
+    apt:
+      name: libopenscap8
+      state: present
+  - name: Transfer scap datastream
+    copy: src=/home/giuseppe/Downloads/scap-security-guide-0.1.53/ssg-ubuntu1804-ds-1.2.xml dest=/tmp/ssg-ubuntu1804-ds-1.2.xml mode=0777
+ 
+  - name: Execute static assessment
+    command: oscap xccdf eval --profile anssi_np_nt28_minimal --report /tmp/oscap_report.html /tmp/ssg-ubuntu1804-ds-1.2.xml
+    register: result
+    failed_when:
+      - result.rc == 1
+  
+  - fetch:
+      src: /tmp/oscap_report.html
       dest: ../Results/
