Update and rename inspec_assessment_playbook.yml to ssessment_playbook.yml

--- a/Static Security Assessment/ssessment_playbook.yml
+++ b/Static Security Assessment/ssessment_playbook.yml
@@ -33,5 +33,9 @@
       - result.rc == 1
   
   - fetch:
-      src: /tmp/oscap_report.html
+      src: /tmp/{{ item }}
       dest: ../Results/
+      with_items:
+        - inspec_report.html
+        - oscap_report.html
+        - provareport.html
