--- a/Static Security Assessment/assessment_playbook.yml
+++ b/Static Security Assessment/assessment_playbook.yml
@@ -30,8 +30,8 @@
   
   - name: Get reports
     find: paths="/tmp" recurse=yes patterns="*.html"
-    register: file_to_copy
+    register: files_to_copy
   - fetch:
-      src: /tmp/{{ item }}
+      src: {{ item.path }}
       dest: ../Results/
       with_items: "{{ files_to_copy.files }}"
