--- a/Static Security Assessment/assessment_playbook.yml
+++ b/Static Security Assessment/assessment_playbook.yml
@@ -9,8 +9,9 @@
   - name: Execute static assessment
     command: "{{item}}"
     with_items:
-      - inspec exec https://github.com/dev-sec/linux-baseline --reporter html:/tmp/inspec_report.html --chef-license=accept
-      - inspec exec https://github.com/dev-sec/ssh-baseline --reporter html:/tmp/provareport.html --chef-license=accept
+      - inspec exec https://github.com/dev-sec/linux-baseline --reporter html:/tmp/linux_chef_Report.html --chef-license=accept
+      - inspec exec https://github.com/dev-sec/ssh-baseline --reporter html:/tmp/ssh_chef_Report.html --chef-license=accept
+      - inspec exec https://github.com/dev-sec/cis-kubernetes-benchmark--reporter html:/tmp/kubernetes_cis_chef_Report.html --chef-license=accept
     register: result
     failed_when:
       - result.rc == 1
@@ -20,10 +21,10 @@
       name: libopenscap8
       state: present
   - name: Transfer scap datastream
-    copy: src=/home/giuseppe/Downloads/scap-security-guide-0.1.53/ssg-ubuntu1804-ds-1.2.xml dest=/tmp/scap_policy.xml mode=0777
+    copy: src=/home/giuseppe/Downloads/scap-security-guide-0.1.55/ssg-ubuntu2004-ds-1.2.xml dest=/tmp/scap_policy.xml mode=0777
  
   - name: Execute static assessment
-    command: oscap xccdf eval --profile anssi_np_nt28_minimal --report /tmp/scap_report.html /tmp/scap_policy.xml
+    command: oscap xccdf eval --profile cpntent_profile_standard --report /tmp/ubuntu2004_scap_Report.html /tmp/scap_policy.xml
     register: result
     failed_when:
       - result.rc == 1
@@ -33,6 +34,7 @@
       src: /tmp/{{ item }}
       dest: ../Results/
     with_items:
-      - inspec_report.html
-      - provareport.html
-      - oscap_report.html
+      - linux_chef_Report.html
+      - ssh_chef_Report.html
+      - kubernetes_cis_chef_Report.html
+      - ubuntu2004_scap_Report.html
